--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,39 @@
-certifi==2020.12.5
-chardet==4.0.0
-coverage==5.4
-cycler==0.10.0
-decorator==4.4.2
-descartes==1.1.0
-idna==2.10
-joblib==1.0.1
-kiwisolver==1.3.1
-lxml==4.6.2
-matplotlib==3.3.4
-MetaboDistTrees==0.1.3
-mizani==0.7.2
-networkx==2.1
-nose2==0.10.0
-numpy==1.20.1
-obonet==0.2.6
-palettable==3.3.0
-pandas==1.2.2
-pathlib==1.0.1
-patsy==0.5.1
-Pillow==8.1.0
-plotnine==0.7.1
-pyMolNetEnhancer==0.1.9
-pyparsing==2.4.7
-pyteomics==4.4.1
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
-requests-cache==0.5.2
-scipy==1.6.1
-six==1.15.0
-statsmodels==0.12.2
-urllib3==1.26.3
-xmltodict==0.12.0
+# Updated requirements.txt with newer versions that have pre-built wheels
+certifi>=2023.0.0
+chardet>=5.0.0
+coverage>=7.0.0
+cycler>=0.11.0
+decorator>=5.1.0
+descartes>=1.1.0
+idna>=3.4
+joblib>=1.3.0
+kiwisolver>=1.4.0
+lxml>=4.9.0
+matplotlib>=3.6.0
+MetaboDistTrees>=0.1.3
+mizani>=0.9.0
+networkx>=3.0
+nose2>=0.12.0
+numpy>=1.24.0
+obonet>=0.3.0
+palettable>=3.3.0
+pandas>=2.0.0
+pathlib2>=2.3.0  # Note: pathlib is built-in in Python 3.4+, use pathlib2 if needed
+patsy>=0.5.3
+Pillow>=9.0.0
+plotnine>=0.12.0
+pyMolNetEnhancer>=0.1.9
+pyparsing>=3.0.0
+pyteomics>=4.6.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+requests>=2.31.0
+requests-cache>=1.1.0
+scipy>=1.11.0  # This is the key change - newer scipy has pre-built wheels
+six>=1.15.0
+statsmodels>=0.12.2
+urllib3>=1.26.3
+xmltodict>=0.12.0
 tqdm
 xlrd
 openpyxl
